@@ -1,5 +1,9 @@
 2017-10-04  Kocsen Chung  <kocsen_chung@apple.com>
 
+        Revert r222779. rdar://problem/34706688
+
+2017-10-04  Kocsen Chung  <kocsen_chung@apple.com>
+
         Revert r222786. rdar://problem/34706688
 
 2017-10-03  Jason Marcell  <jmarcell@apple.com>
